# openglbug

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  main.h
cmake/: FindGLUT.cmake  FindSDL2.cmake
tgglut/: glutmain.cpp
tgsdl/: sdlmain.cpp
tgsdl2/: sdl2main.cpp
tgwin/: tgwmain.cpp
